# antihyip-site

./: .gitignore  add_badsites.py  add_test_models.py  manage.py  pyproject.toml  test_questions.py
antihyip/: asgi.py  settings.py  urls.py  wsgi.py
hyiptest/: apps.py  forms.py  models.py  urls.py  views.py
hyiptest/static/css/: styles.css
hyiptest/templates/: base_generic.html  index.html
hyiptest/templates/hyiptest/: ask_question.html  badsite_detail.html  badsite_list.html  domain_result.html  input_domain.html  question_detail.html  question_list.html  select_qgroup.html  test_ask_question.html  test_fail.html  test_pass.html  test_select_qgroup.html  test_suspicious.html
